homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.home.coolkev.com
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
  type: LoadBalancer
